2024/Q3/front-back-end-data-transfer/demo-backend/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 20240712
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
